# cpp-examples

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  vcpkg-configuration.json  vcpkg.json  xmake.lua
cmake/: Dependencies.cmake  Exercises.cmake  ExercisesAll.cmake  ProjectOptions.cmake  ProjectPlatform.cmake  ProjectWarnings.cmake
exercises/: base_x.cpp  bin_files.cpp  bin_pod_files.cpp  caesar_cipher.cpp  chars.cpp  classes.cpp  cli_app.cpp  compiler_info.cpp  concepts.cpp  coroutines_ext.cpp  coroutines_simple.cpp  create_text_files.cpp  crypt.cpp  csv_files.cpp  date_time.cpp  factorial.cpp  fibonacci.cpp  fibonacci_rec.cpp  find_primes.cpp  fizzbuzz.cpp  formatter.cpp  hashing.cpp  haversine.cpp  jwt.cpp  logger.cpp  loops.cpp  matrix_struct.cpp  mini_mlp.cpp  morse.cpp  namespaces.cpp  open_meteo.cpp  print.cpp  rand_uuid.cpp  ranges.cpp  read_text_files.cpp  regex_demo.cpp  rest_client.cpp  result_error.cpp  socket_client.cpp  socket_server.cpp  (+7 more)
include/: dotenv.hpp  generator.hpp  namespaces.hpp  structs.hpp
src/: main.cpp
xmake/: dependencies_git.lua  xmake.lua
